Remove default favicons

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,6 @@
 {
-  "name": "ahora-gobierno",
-  "short_name": "ahora-gobierno",
-  "icons": [
-    {
-      "src": "./img/icons/android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "./img/icons/android-chrome-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ],
+  "name": "¿Ahora, Gobierno?",
+  "short_name": "¿Ahora, Gobierno?",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#000000",
